# hypot

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: mkdocs.yml
api_ref/: index.html
docs/: api_ref.md  index.md
src/hypot/: source.py
tests/: test_calc.py
